--- a/netlify.toml
+++ b/netlify.toml
@@ -15,4 +15,5 @@
       X-Content-Type-Options = "nosniff"
       X-Frame-Options = "DENY"
       X-XSS-Protection = "0"
+      Cache-Control = "public, max-age=31536000, immutable"
 '@ | Out-File -FilePath netlify.toml -Encoding utf8
