Fix netlify config

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,19 +1,10 @@
-@'
+# netlify.toml (root of repo)
+
 [build]
   command = "npm run build"
   publish = "dist"
 
 [[redirects]]
   from = "/*"
-  to = "/index.html"
+  to   = "/index.html"
   status = 200
-
-[headers]
-  for = "/*"
-    [headers.values]
-      Referrer-Policy = "strict-origin-when-cross-origin"
-      X-Content-Type-Options = "nosniff"
-      X-Frame-Options = "DENY"
-      X-XSS-Protection = "0"
-      Cache-Control = "public, max-age=31536000, immutable"
-'@ | Out-File -FilePath netlify.toml -Encoding utf8
